--- a/lib/gsasl.h.in
+++ b/lib/gsasl.h.in
@@ -120,12 +120,12 @@ extern "C"
   } Gsasl_cipher;
 
 /* Library handles */
-  typedef struct Gsasl_ctx Gsasl_ctx;
-  typedef struct Gsasl_session_ctx Gsasl_session_ctx;
+  typedef struct Gsasl Gsasl;
+  typedef struct Gsasl_session Gsasl_session;
 
 /* Library entry and exit points: version.c, init.c, done.c */
-  extern int gsasl_init (Gsasl_ctx ** ctx);
-  extern void gsasl_done (Gsasl_ctx * ctx);
+  extern int gsasl_init (Gsasl ** ctx);
+  extern void gsasl_done (Gsasl * ctx);
   extern const char *gsasl_check_version (const char *req_version);
 
 /* Internationalized string processing: stringprep.c */
@@ -134,42 +134,42 @@ extern "C"
   extern char *gsasl_stringprep_trace (const char *in, int *stringprep_rc);
 
 /* Callback handling: callback.c */
-  extern Gsasl_ctx *gsasl_ctx_get (Gsasl_session_ctx * sctx);
-  extern void gsasl_application_data_set (Gsasl_ctx * ctx,
+  extern Gsasl *gsasl_ctx_get (Gsasl_session * sctx);
+  extern void gsasl_application_data_set (Gsasl * ctx,
 					  void *application_data);
-  extern void *gsasl_application_data_get (Gsasl_ctx * ctx);
-  extern void gsasl_appinfo_set (Gsasl_session_ctx * sctx,
+  extern void *gsasl_application_data_get (Gsasl * ctx);
+  extern void gsasl_appinfo_set (Gsasl_session * sctx,
 				 void *application_data);
-  extern void *gsasl_appinfo_get (Gsasl_session_ctx * sctx);
+  extern void *gsasl_appinfo_get (Gsasl_session * sctx);
 
 /* Mechanism handling: listmech.c, supportp.c, suggest.c */
-  extern int gsasl_client_mechlist (Gsasl_ctx * ctx, char **out);
-  extern int gsasl_client_support_p (Gsasl_ctx * ctx, const char *name);
-  extern const char *gsasl_client_suggest_mechanism (Gsasl_ctx * ctx,
+  extern int gsasl_client_mechlist (Gsasl * ctx, char **out);
+  extern int gsasl_client_support_p (Gsasl * ctx, const char *name);
+  extern const char *gsasl_client_suggest_mechanism (Gsasl * ctx,
 						     const char *mechlist);
 
-  extern int gsasl_server_mechlist (Gsasl_ctx * ctx, char **out);
-  extern int gsasl_server_support_p (Gsasl_ctx * ctx, const char *name);
-  extern const char *gsasl_server_suggest_mechanism (Gsasl_ctx * ctx,
+  extern int gsasl_server_mechlist (Gsasl * ctx, char **out);
+  extern int gsasl_server_support_p (Gsasl * ctx, const char *name);
+  extern const char *gsasl_server_suggest_mechanism (Gsasl * ctx,
 						     const char *mechlist);
 
 /* Authentication functions: xstart.c, xstep.c, xfinish.c */
-  extern int gsasl_client_start (Gsasl_ctx * ctx, const char *mech,
-				 Gsasl_session_ctx ** sctx);
-  extern int gsasl_server_start (Gsasl_ctx * ctx, const char *mech,
-				 Gsasl_session_ctx ** sctx);
-  extern int gsasl_step (Gsasl_session_ctx * sctx,
+  extern int gsasl_client_start (Gsasl * ctx, const char *mech,
+				 Gsasl_session ** sctx);
+  extern int gsasl_server_start (Gsasl * ctx, const char *mech,
+				 Gsasl_session ** sctx);
+  extern int gsasl_step (Gsasl_session * sctx,
 			 const char *input, size_t input_len,
 			 char **output, size_t * output_len);
-  extern int gsasl_step64 (Gsasl_session_ctx * sctx,
+  extern int gsasl_step64 (Gsasl_session * sctx,
 			   const char *b64input, char **b64output);
-  extern void gsasl_finish (Gsasl_session_ctx * sctx);
+  extern void gsasl_finish (Gsasl_session * sctx);
 
 /* Session functions: xcode.c */
-  extern int gsasl_encode (Gsasl_session_ctx * sctx,
+  extern int gsasl_encode (Gsasl_session * sctx,
 			   const char *input, size_t input_len,
 			   char *output, size_t * output_len);
-  extern int gsasl_decode (Gsasl_session_ctx * sctx,
+  extern int gsasl_decode (Gsasl_session * sctx,
 			   const char *input, size_t input_len,
 			   char *output, size_t * output_len);
 
@@ -187,215 +187,217 @@ extern "C"
 					char *key, size_t * keylen);
 
 /* Callback prototypes */
-  typedef int (*Gsasl_client_callback_anonymous) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_client_callback_anonymous) (Gsasl_session * sctx,
 						  char *out, size_t * outlen);
-  typedef int (*Gsasl_client_callback_authentication_id) (Gsasl_session_ctx *
+  typedef int (*Gsasl_client_callback_authentication_id) (Gsasl_session *
 							  sctx, char *out,
 							  size_t * outlen);
-  typedef int (*Gsasl_client_callback_authorization_id) (Gsasl_session_ctx *
+  typedef int (*Gsasl_client_callback_authorization_id) (Gsasl_session *
 							 sctx, char *out,
 							 size_t * outlen);
-  typedef int (*Gsasl_client_callback_password) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_client_callback_password) (Gsasl_session * sctx,
 						 char *out, size_t * outlen);
-  typedef int (*Gsasl_client_callback_passcode) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_client_callback_passcode) (Gsasl_session * sctx,
 						 char *out, size_t * outlen);
-  typedef int (*Gsasl_client_callback_pin) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_client_callback_pin) (Gsasl_session * sctx,
 					    char *suggestion, char *out,
 					    size_t * outlen);
-  typedef int (*Gsasl_client_callback_service) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_client_callback_service) (Gsasl_session * sctx,
 						char *service,
 						size_t * servicelen,
 						char *hostname,
 						size_t * hostnamelen,
 						char *servicename,
 						size_t * servicenamelen);
-  typedef Gsasl_qop (*Gsasl_client_callback_qop) (Gsasl_session_ctx * sctx,
+  typedef Gsasl_qop (*Gsasl_client_callback_qop) (Gsasl_session * sctx,
 						  Gsasl_qop serverqops);
-  typedef size_t (*Gsasl_client_callback_maxbuf) (Gsasl_session_ctx * sctx,
+  typedef size_t (*Gsasl_client_callback_maxbuf) (Gsasl_session * sctx,
 						  size_t servermaxbuf);
-  typedef int (*Gsasl_client_callback_realm) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_client_callback_realm) (Gsasl_session * sctx,
 					      char *out, size_t * outlen);
-  typedef int (*Gsasl_server_callback_retrieve) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_server_callback_retrieve) (Gsasl_session * sctx,
 						 const char
 						 *authentication_id,
 						 const char *authorization_id,
 						 const char *realm, char *key,
 						 size_t * keylen);
-  typedef int (*Gsasl_server_callback_validate) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_server_callback_validate) (Gsasl_session * sctx,
 						 const char *authorization_id,
 						 const char
 						 *authentication_id,
 						 const char *password);
-  typedef int (*Gsasl_server_callback_gssapi) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_server_callback_gssapi) (Gsasl_session * sctx,
 					       const char *clientname,
 					       const char *authentication_id);
-  typedef int (*Gsasl_server_callback_securid) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_server_callback_securid) (Gsasl_session * sctx,
 						const char *authentication_id,
 						const char *authorization_id,
 						const char *passcode,
 						char *pin, char *suggestpin,
 						size_t * suggestpinlen);
-  typedef int (*Gsasl_server_callback_cram_md5) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_server_callback_cram_md5) (Gsasl_session * sctx,
 						 char *username,
 						 char *challenge,
 						 char *response);
-  typedef int (*Gsasl_server_callback_digest_md5) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_server_callback_digest_md5) (Gsasl_session * sctx,
 						   char *username,
 						   char *realm,
 						   char *secrethash);
-  typedef int (*Gsasl_server_callback_service) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_server_callback_service) (Gsasl_session * sctx,
 						char *service,
 						size_t * servicelen,
 						char *hostname,
 						size_t * hostnamelen);
-  typedef int (*Gsasl_server_callback_external) (Gsasl_session_ctx * sctx);
-  typedef int (*Gsasl_server_callback_anonymous) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_server_callback_external) (Gsasl_session * sctx);
+  typedef int (*Gsasl_server_callback_anonymous) (Gsasl_session * sctx,
 						  const char *token);
-  typedef int (*Gsasl_server_callback_realm) (Gsasl_session_ctx * sctx,
+  typedef int (*Gsasl_server_callback_realm) (Gsasl_session * sctx,
 					      char *out,
 					      size_t * outlen, size_t nth);
-  typedef Gsasl_qop (*Gsasl_server_callback_qop) (Gsasl_session_ctx * sctx);
-  typedef size_t (*Gsasl_server_callback_maxbuf) (Gsasl_session_ctx * sctx);
-  typedef Gsasl_cipher (*Gsasl_server_callback_cipher) (Gsasl_session_ctx *
+  typedef Gsasl_qop (*Gsasl_server_callback_qop) (Gsasl_session * sctx);
+  typedef size_t (*Gsasl_server_callback_maxbuf) (Gsasl_session * sctx);
+  typedef Gsasl_cipher (*Gsasl_server_callback_cipher) (Gsasl_session *
 							sctx);
 
 /* Client callbacks: callback-c.c */
-  extern void gsasl_client_callback_authorization_id_set (Gsasl_ctx * ctx,
+  extern void gsasl_client_callback_authorization_id_set (Gsasl * ctx,
 							  Gsasl_client_callback_authorization_id
 							  cb);
   extern Gsasl_client_callback_authorization_id
-    gsasl_client_callback_authorization_id_get (Gsasl_ctx * ctx);
+    gsasl_client_callback_authorization_id_get (Gsasl * ctx);
 
-  extern void gsasl_client_callback_authentication_id_set (Gsasl_ctx * ctx,
+  extern void gsasl_client_callback_authentication_id_set (Gsasl * ctx,
 							   Gsasl_client_callback_authentication_id
 							   cb);
   extern Gsasl_client_callback_authentication_id
-    gsasl_client_callback_authentication_id_get (Gsasl_ctx * ctx);
+    gsasl_client_callback_authentication_id_get (Gsasl * ctx);
 
-  extern void gsasl_client_callback_anonymous_set (Gsasl_ctx * ctx,
+  extern void gsasl_client_callback_anonymous_set (Gsasl * ctx,
 						   Gsasl_client_callback_anonymous
 						   cb);
   extern Gsasl_client_callback_anonymous
-    gsasl_client_callback_anonymous_get (Gsasl_ctx * ctx);
+    gsasl_client_callback_anonymous_get (Gsasl * ctx);
 
-  extern void gsasl_client_callback_password_set (Gsasl_ctx * ctx,
+  extern void gsasl_client_callback_password_set (Gsasl * ctx,
 						  Gsasl_client_callback_password
 						  cb);
   extern Gsasl_client_callback_password
-    gsasl_client_callback_password_get (Gsasl_ctx * ctx);
+    gsasl_client_callback_password_get (Gsasl * ctx);
 
-  extern void gsasl_client_callback_passcode_set (Gsasl_ctx * ctx,
+  extern void gsasl_client_callback_passcode_set (Gsasl * ctx,
 						  Gsasl_client_callback_passcode
 						  cb);
   extern Gsasl_client_callback_passcode
-    gsasl_client_callback_passcode_get (Gsasl_ctx * ctx);
+    gsasl_client_callback_passcode_get (Gsasl * ctx);
 
-  extern void gsasl_client_callback_pin_set (Gsasl_ctx * ctx,
+  extern void gsasl_client_callback_pin_set (Gsasl * ctx,
 					     Gsasl_client_callback_pin cb);
   extern Gsasl_client_callback_pin
-    gsasl_client_callback_pin_get (Gsasl_ctx * ctx);
+    gsasl_client_callback_pin_get (Gsasl * ctx);
 
-  extern void gsasl_client_callback_service_set (Gsasl_ctx * ctx,
+  extern void gsasl_client_callback_service_set (Gsasl * ctx,
 						 Gsasl_client_callback_service
 						 cb);
   extern Gsasl_client_callback_service
-    gsasl_client_callback_service_get (Gsasl_ctx * ctx);
+    gsasl_client_callback_service_get (Gsasl * ctx);
 
-  extern void gsasl_client_callback_qop_set (Gsasl_ctx * ctx,
+  extern void gsasl_client_callback_qop_set (Gsasl * ctx,
 					     Gsasl_client_callback_qop cb);
   extern Gsasl_client_callback_qop
-    gsasl_client_callback_qop_get (Gsasl_ctx * ctx);
+    gsasl_client_callback_qop_get (Gsasl * ctx);
 
-  extern void gsasl_client_callback_maxbuf_set (Gsasl_ctx * ctx,
+  extern void gsasl_client_callback_maxbuf_set (Gsasl * ctx,
 						Gsasl_client_callback_maxbuf
 						cb);
   extern Gsasl_client_callback_maxbuf
-    gsasl_client_callback_maxbuf_get (Gsasl_ctx * ctx);
-  extern void gsasl_client_callback_realm_set (Gsasl_ctx * ctx,
+    gsasl_client_callback_maxbuf_get (Gsasl * ctx);
+  extern void gsasl_client_callback_realm_set (Gsasl * ctx,
 					       Gsasl_client_callback_realm
 					       cb);
   extern Gsasl_client_callback_realm
-    gsasl_client_callback_realm_get (Gsasl_ctx * ctx);
+    gsasl_client_callback_realm_get (Gsasl * ctx);
 
 /* Server callbacks: callback-s.c */
-  extern void gsasl_server_callback_validate_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_validate_set (Gsasl * ctx,
 						  Gsasl_server_callback_validate
 						  cb);
   extern Gsasl_server_callback_validate
-    gsasl_server_callback_validate_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_validate_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_retrieve_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_retrieve_set (Gsasl * ctx,
 						  Gsasl_server_callback_retrieve
 						  cb);
   extern Gsasl_server_callback_retrieve
-    gsasl_server_callback_retrieve_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_retrieve_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_cram_md5_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_cram_md5_set (Gsasl * ctx,
 						  Gsasl_server_callback_cram_md5
 						  cb);
   extern Gsasl_server_callback_cram_md5
-    gsasl_server_callback_cram_md5_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_cram_md5_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_digest_md5_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_digest_md5_set (Gsasl * ctx,
 						    Gsasl_server_callback_digest_md5
 						    cb);
   extern Gsasl_server_callback_digest_md5
-    gsasl_server_callback_digest_md5_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_digest_md5_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_external_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_external_set (Gsasl * ctx,
 						  Gsasl_server_callback_external
 						  cb);
   extern Gsasl_server_callback_external
-    gsasl_server_callback_external_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_external_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_anonymous_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_anonymous_set (Gsasl * ctx,
 						   Gsasl_server_callback_anonymous
 						   cb);
   extern Gsasl_server_callback_anonymous
-    gsasl_server_callback_anonymous_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_anonymous_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_realm_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_realm_set (Gsasl * ctx,
 					       Gsasl_server_callback_realm
 					       cb);
   extern Gsasl_server_callback_realm
-    gsasl_server_callback_realm_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_realm_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_qop_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_qop_set (Gsasl * ctx,
 					     Gsasl_server_callback_qop cb);
   extern Gsasl_server_callback_qop
-    gsasl_server_callback_qop_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_qop_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_maxbuf_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_maxbuf_set (Gsasl * ctx,
 						Gsasl_server_callback_maxbuf
 						cb);
   extern Gsasl_server_callback_maxbuf
-    gsasl_server_callback_maxbuf_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_maxbuf_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_cipher_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_cipher_set (Gsasl * ctx,
 						Gsasl_server_callback_cipher
 						cb);
   extern Gsasl_server_callback_cipher
-    gsasl_server_callback_cipher_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_cipher_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_securid_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_securid_set (Gsasl * ctx,
 						 Gsasl_server_callback_securid
 						 cb);
   extern Gsasl_server_callback_securid
-    gsasl_server_callback_securid_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_securid_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_gssapi_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_gssapi_set (Gsasl * ctx,
 						Gsasl_server_callback_gssapi
 						cb);
   extern Gsasl_server_callback_gssapi
-    gsasl_server_callback_gssapi_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_gssapi_get (Gsasl * ctx);
 
-  extern void gsasl_server_callback_service_set (Gsasl_ctx * ctx,
+  extern void gsasl_server_callback_service_set (Gsasl * ctx,
 						 Gsasl_server_callback_service
 						 cb);
   extern Gsasl_server_callback_service
-    gsasl_server_callback_service_get (Gsasl_ctx * ctx);
+    gsasl_server_callback_service_get (Gsasl * ctx);
 
   /* Obsolete functions. */
+#define Gsasl_ctx Gsasl
+#define Gsasl_session_ctx Gsasl_session
   extern int gsasl_client_listmech (Gsasl_ctx * ctx, char *out,
 				    size_t * outlen);
   extern int gsasl_server_listmech (Gsasl_ctx * ctx, char *out,
@@ -422,7 +424,6 @@ extern "C"
   extern void gsasl_server_application_data_set (Gsasl_session_ctx * sctx,
 						 void *application_data);
   extern void *gsasl_server_application_data_get (Gsasl_session_ctx * sctx);
-
 
 #ifdef __cplusplus
 }
