--- a/lib/gsasl.h.in
+++ b/lib/gsasl.h.in
@@ -135,11 +135,9 @@ extern "C"
 
 /* Callback handling: callback.c */
   extern Gsasl *gsasl_ctx_get (Gsasl_session * sctx);
-  extern void gsasl_application_data_set (Gsasl * ctx,
-					  void *application_data);
+  extern void gsasl_application_data_set (Gsasl * ctx, void *appdata);
   extern void *gsasl_application_data_get (Gsasl * ctx);
-  extern void gsasl_appinfo_set (Gsasl_session * sctx,
-				 void *application_data);
+  extern void gsasl_appinfo_set (Gsasl_session * sctx, void *appdata);
   extern void *gsasl_appinfo_get (Gsasl_session * sctx);
 
 /* Mechanism handling: listmech.c, supportp.c, suggest.c */
