(Gsasl_rc): Add GSASL_INVALID_HANDLE.

--- a/lib/gsasl.h.in
+++ b/lib/gsasl.h.in
@@ -97,8 +97,9 @@ extern "C"
     GSASL_KERBEROS_V5_INTERNAL_ERROR,
     GSASL_SHISHI_ERROR = GSASL_KERBEROS_V5_INTERNAL_ERROR,
     GSASL_SECURID_SERVER_NEED_ADDITIONAL_PASSCODE,
-    GSASL_SECURID_SERVER_NEED_NEW_PIN
-  } Gsasl_rc;
+    GSASL_SECURID_SERVER_NEED_NEW_PIN,
+    GSASL_INVALID_HANDLE
+ } Gsasl_rc;
 
 /* Quality of Protection types, used by DIGEST-MD5 */
   typedef enum
