Add smtp.h and imap.h.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,7 +25,8 @@ AM_CPPFLAGS = -I../lib -I$(top_srcdir)/lib
 bin_PROGRAMS = gsasl
 
 BUILT_SOURCES = gsasl_cmd.c gsasl_cmd.h
-gsasl_SOURCES = gsasl.c $(BUILT_SOURCES) gsasl.ggo imap.c smtp.c \
+gsasl_SOURCES = gsasl.c $(BUILT_SOURCES) gsasl.ggo \
+	imap.c imap.h smtp.c smtp.h \
 	callbacks.h callbacks.c internal.h
 gsasl_LDADD = ../lib/libgsasl.la $(LTLIBOBJS)
 
