Disable fortran etc libtool tests.

--- a/configure.ac
+++ b/configure.ac
@@ -42,6 +42,7 @@ AM_GNU_GETTEXT_VERSION(0.12.1)
 AC_PROG_CC
 AM_MISSING_PROG(PERL, perl, $missing_dir)
 AM_MISSING_PROG(HELP2MAN, help2man, $missing_dir)
+AC_LIBTOOL_TAGS
 AC_PROG_LIBTOOL
 
 # ANONYMOUS
