--- a/lib/gsasl.h.in
+++ b/lib/gsasl.h.in
@@ -76,6 +76,7 @@ extern "C"
     GSASL_NEED_SERVER_GSSAPI_CALLBACK,
     GSASL_NEED_SERVER_RETRIEVE_CALLBACK,
     GSASL_UNICODE_NORMALIZATION_ERROR,
+    GSASL_SASLPREP_ERROR,
     GSASL_MECHANISM_PARSE_ERROR,
     GSASL_AUTHENTICATION_ERROR,
     GSASL_CANNOT_GET_CTX,
