Work with autoconf 2.58, automake 1.7, libtool 1.5.

--- a/configure.ac
+++ b/configure.ac
@@ -32,8 +32,8 @@ AC_SUBST(LT_CURRENT)
 AC_SUBST(LT_REVISION)
 AC_SUBST(LT_AGE)
 
-AC_PREREQ(2.59)
-AM_INIT_AUTOMAKE([1.8 gnits])
+AC_PREREQ(2.57)
+AM_INIT_AUTOMAKE([1.7 gnits])
 AC_CONFIG_HEADERS(config.h)
 
 # Checks for programs.
@@ -42,12 +42,11 @@ AM_GNU_GETTEXT_VERSION(0.12.1)
 AC_PROG_CC
 AM_MISSING_PROG(PERL, perl, $missing_dir)
 AM_MISSING_PROG(HELP2MAN, help2man, $missing_dir)
-AC_LIBTOOL_TAGS
 AC_PROG_LIBTOOL
 
 # ANONYMOUS
 AC_ARG_ENABLE(anonymous,
-  AS_HELP_STRING([--disable-anonymous], [don't use the ANONYMOUS mechanism]),
+  AC_HELP_STRING([--disable-anonymous], [don't use the ANONYMOUS mechanism]),
   anonymous=$enableval)
 if test "$anonymous" != "no" ; then
 	anonymous=yes
@@ -59,7 +58,7 @@ AM_CONDITIONAL(ANONYMOUS, test x$anonymous = xyes)
 
 # EXTERNAL
 AC_ARG_ENABLE(external,
-  AS_HELP_STRING([--disable-external], [don't use the EXTERNAL mechanism]),
+  AC_HELP_STRING([--disable-external], [don't use the EXTERNAL mechanism]),
   external=$enableval)
 if test "$external" != "no" ; then
 	external=yes
@@ -71,7 +70,7 @@ AM_CONDITIONAL(EXTERNAL, test x$external = xyes)
 
 # PLAIN
 AC_ARG_ENABLE(plain,
-  AS_HELP_STRING([--disable-plain], [don't use the PLAIN mechanism]),
+  AC_HELP_STRING([--disable-plain], [don't use the PLAIN mechanism]),
   plain=$enableval)
 if test "$plain" != "no" ; then
 	plain=yes
@@ -83,7 +82,7 @@ AM_CONDITIONAL(PLAIN, test x$plain = xyes)
 
 # LOGIN
 AC_ARG_ENABLE(login,
-  AS_HELP_STRING([--disable-login], [don't use the LOGIN mechanism]),
+  AC_HELP_STRING([--disable-login], [don't use the LOGIN mechanism]),
   login=$enableval)
 if test "$login" != "no" ; then
 	login=yes
@@ -95,7 +94,7 @@ AM_CONDITIONAL(LOGIN, test x$login = xyes)
 
 # SECURID
 AC_ARG_ENABLE(securid,
-  AS_HELP_STRING([--disable-securid], [don't use the SECURID mechanism]),
+  AC_HELP_STRING([--disable-securid], [don't use the SECURID mechanism]),
   securid=$enableval)
 if test "$securid" != "no" ; then
 	securid=yes
@@ -107,7 +106,7 @@ AM_CONDITIONAL(SECURID, test x$securid = xyes)
 
 # NTLM
 AC_ARG_ENABLE(ntlm,
-  AS_HELP_STRING([--disable-ntlm], [don't use the NTLM mechanism]),
+  AC_HELP_STRING([--disable-ntlm], [don't use the NTLM mechanism]),
   ntlm=$enableval)
 if test "$ntlm" != "no"; then
 	sj_CHECK_HEADERLIB(ntlm.h, ntlm, buildSmbNtlmAuthRequest,
@@ -122,7 +121,7 @@ AM_CONDITIONAL(NTLM, test x$ntlm = xyes)
 
 # Check for libgcrypt
 AC_ARG_WITH(libgcrypt,
-  AS_HELP_STRING([--with-libgcrypt], [use libgcrypt for low-level crypto]),
+  AC_HELP_STRING([--with-libgcrypt], [use libgcrypt for low-level crypto]),
   libgcrypt=$withval, libgcrypt=yes)
 if test "$libgcrypt" != "no" ; then
 	AM_PATH_LIBGCRYPT(1.1.42, :, [
@@ -145,7 +144,7 @@ AC_SUBST(NETTLE_LIBS)
 
 # CRAM-MD5
 AC_ARG_ENABLE(cram-md5,
-  AS_HELP_STRING([--disable-cram-md5], [don't use the CRAM-MD5 mechanism]),
+  AC_HELP_STRING([--disable-cram-md5], [don't use the CRAM-MD5 mechanism]),
   cram_md5=$enableval)
 if test "$cram_md5" != "no" ; then
 	cram_md5=yes
@@ -157,7 +156,7 @@ AM_CONDITIONAL(CRAM_MD5, test x$cram_md5 = xyes)
 
 # DIGEST-MD5
 AC_ARG_ENABLE(digest-md5,
-  AS_HELP_STRING([--disable-digest-md5], [don't use the DIGEST-MD5 mechanism]),
+  AC_HELP_STRING([--disable-digest-md5], [don't use the DIGEST-MD5 mechanism]),
   digest_md5=$enableval)
 if test "$digest_md5" != "no" ; then
 	digest_md5=yes
@@ -169,7 +168,7 @@ AM_CONDITIONAL(DIGEST_MD5, test x$digest_md5 = xyes)
 
 # GSSAPI.
 AC_ARG_ENABLE(gssapi,
-  AS_HELP_STRING([--disable-gssapi], [don't use the GSSAPI mechanism]),
+  AC_HELP_STRING([--disable-gssapi], [don't use the GSSAPI mechanism]),
   gssapi=$enableval, gssapi=yes)
 AC_MSG_NOTICE([checking for GSS implementation])
 if test "$gssapi" = "gss"; then
@@ -268,7 +267,7 @@ AM_CONDITIONAL(GSSAPI, test x$gssapi = xyes)
 
 # KERBEROS_V5
 AC_ARG_ENABLE(kerberos_v5,
-	AS_HELP_STRING([--disable-kerberos_v5],
+	AC_HELP_STRING([--disable-kerberos_v5],
                        [don't use the KERBEROS_V5 mechanism]),
 	kerberos_v5=$enableval, kerberos_v5=no)
 if test "$kerberos_v5" != "no" ; then
@@ -285,7 +284,7 @@ AM_CONDITIONAL(KERBEROS_V5, test x$kerberos_v5 = xyes)
 
 # Check for idn
 AC_ARG_WITH(stringprep,
-  AS_HELP_STRING([--without-stringprep],
+  AC_HELP_STRING([--without-stringprep],
 		[don't use libidn for string processing even if available]),
 	stringprep=$withval, stringprep=yes)
 if test "$stringprep" != "no"; then
@@ -300,10 +299,10 @@ AM_CONDITIONAL(STRINGPREP, test x$stringprep = xyes)
 
 # Allow disabling of client or server.
 AC_ARG_ENABLE(client,
-              AS_HELP_STRING([--disable-client], [Disable client code]),
+              AC_HELP_STRING([--disable-client], [Disable client code]),
 	      client=$enableval)
 AC_ARG_ENABLE(server,
-              AS_HELP_STRING([--disable-server], [Disable server code]),
+              AC_HELP_STRING([--disable-server], [Disable server code]),
 	      server=$enableval)
 if test "$client" != "no"; then
   AC_DEFINE(USE_CLIENT, 1, [Define to 1 if you want client code.])
