--- a/Makefile.am
+++ b/Makefile.am
@@ -66,4 +66,4 @@ release:
 	cp -v doc/reference/*.{html,png} $(htmldir)/reference/
 	cd doc/doxygen && doxygen && cd ../.. && cp -v doc/doxygen/html/* $(htmldir)/doxygen/ && cd doc/doxygen/latex && make ps pdf && cd ../../../ && cp doc/doxygen/latex/refman.pdf $(htmldir)/doxygen/$(PACKAGE).pdf && cp doc/doxygen/latex/refman.ps $(htmldir)/doxygen/$(PACKAGE).ps
 	cd $(htmldir) && cvs add -kb releases/$(distdir).tar.gz{,.sig} && \
-		cvs commit -m "Update." manual/ reference/ doxygen/
+		cvs commit -m "Update." manual/ reference/ doxygen/ releases/
