Add -Igl, for gettext.h.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,7 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-AM_CPPFLAGS = -I../lib -I$(top_srcdir)/lib
+AM_CPPFLAGS = -I$(top_srcdir)/gl -I../lib -I$(top_srcdir)/lib
 
 bin_PROGRAMS = gsasl
 
