--- a/lib/digest-md5/Makefile.am
+++ b/lib/digest-md5/Makefile.am
@@ -18,11 +18,14 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
+# -Igl is for strdup.
 # -Icrypto is for nettle-types.h, all other crypto API goes via GSASL.
-AM_CPPFLAGS = -I$(top_srcdir)/crypto -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_CPPFLAGS = -I$(top_srcdir)/gl -I$(top_srcdir)/crypto \
+	-I$(top_srcdir)/lib -I$(top_builddir)/lib
 
 noinst_LTLIBRARIES = libgsasl-digest_md5.la
 libgsasl_digest_md5_la_SOURCES = digest-md5.h digest-md5.c
+libgsasl_digest_md5_la_LIBADD = $(top_builddir)/gl/libgl.la
 
 indent:
 	indent $(libgsasl_digest_md5_la_SOURCES)
