Don't build libgsasl.pc here. Don't recurse into crypto/.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,14 +18,7 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libgsasl.pc
-
-SUBDIRS = po gl
-if NETTLE
-SUBDIRS += crypto
-endif
-SUBDIRS += lib src tests doc
+SUBDIRS = po gl lib src tests doc
 
 ACLOCAL_AMFLAGS = -I m4 -I gl/m4
 
