--- a/lib/cram-md5/Makefile.am
+++ b/lib/cram-md5/Makefile.am
@@ -18,7 +18,7 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-AM_CPPFLAGS = -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_CPPFLAGS = -I$(srcdir)/../src -I$(builddir)/../src
 
 noinst_LTLIBRARIES = libgsasl-cram_md5.la
 libgsasl_cram_md5_la_SOURCES = cram-md5.h cram-md5.c
