--- a/lib/gssapi/Makefile.am
+++ b/lib/gssapi/Makefile.am
@@ -18,7 +18,7 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-AM_CPPFLAGS = -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_CPPFLAGS = -I$(srcdir)/../src -I../src
 
 noinst_LTLIBRARIES = libgsasl-gssapi.la
 libgsasl_gssapi_la_SOURCES = x-gssapi.h gssapi.c
