--- a/lib/ntlm/Makefile.am
+++ b/lib/ntlm/Makefile.am
@@ -18,7 +18,7 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-AM_CPPFLAGS = -I$(top_srcdir)/lib -I$(top_builddir)/lib
+AM_CPPFLAGS = -I$(srcdir)/../src -I../src
 
 noinst_LTLIBRARIES = libgsasl-ntlm.la
 libgsasl_ntlm_la_SOURCES = x-ntlm.h ntlm.c
