*** empty log message ***

--- a/lib/.cvsignore
+++ b/lib/.cvsignore
@@ -1,7 +1,30 @@
-.deps
-.libs
+ABOUT-NLS
+COPYING
+INSTALL
 Makefile
 Makefile.in
-*.lo
-*.la
-gsasl.h
+aclocal.m4
+autom4te.cache
+compile
+confdefs.h
+config.guess
+config.h
+config.h.in
+config.log
+config.rpath
+config.status
+config.sub
+configure
+conftest.c
+depcomp
+install-sh
+intl
+libgsasl-*
+libgsasl.pc
+libtool
+ltmain.sh
+missing
+mkinstalldirs
+stamp-h*
+mdate-sh
+texinfo.tex
